# study-tracker

./: .database_env  .env  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: documentation.md  todo.md
src/: db_config.sh  db_creation.py  exec-functions.sh  features.py  main.py  run_study_tracker.sh
src/util/: db_config.py  eda.py  exception.py  logger.py
